--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,96 @@
-
+absl-py==1.4.0
+alembic==1.7.1
+astor==0.8.1
+astunparse==1.6.3
+atomicwrites==1.4.1
+attrs==21.2.0
+cachetools==4.2.4
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
+click==8.0.1
+colorama==0.4.6
+coverage==5.5
+cycler==0.11.0
+distlib==0.3.8
+Django==1.11
+Faker==15.3.4
+filelock==3.12.2
+Flask==2.0.1
+Flask-Alembic==2.0.1
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+flatbuffers==23.1.21
+fonttools==4.38.0
+gast==0.2.2
+gevent==21.8.0
+google-auth==1.35.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==1.1.1
+grpcio==1.51.3
+gunicorn==20.1.0
+h5py==2.10.0
+idna==3.4
+importlib-metadata==6.7.0
+importlib-resources==5.2.2
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+keras==2.10.0
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.4
+libclang==15.0.6.1
+Mako==1.1.5
+Markdown==3.4.1
+MarkupSafe==2.0.1
+marshmallow==3.13.0
+marshmallow-enum==1.5.1
+marshmallow-sqlalchemy==0.26.1
+matplotlib==3.5.3
+numpy==1.21.6
+oauthlib==3.2.2
+opencv-python==4.7.0.72
+opt-einsum==3.3.0
+packaging==21.0
+pandas==1.3.5
+Pillow==9.4.0
+platformdirs==4.0.0
+pluggy==1.0.0
+protobuf==3.19.6
+py==1.10.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pyparsing==2.4.7
+pytest==6.2.5
+pytest-cov==2.12.1
+python-dateutil==2.8.2
+pytz==2022.7
+PyYAML==6.0
+requests==2.28.2
+requests-oauthlib==1.3.1
+rsa==4.9
+scipy==1.4.1
+six==1.16.0
+SQLAlchemy==1.4.23
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-intel==2.11.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.2.0
+toml==0.10.2
+typing_extensions==4.7.1
+urllib3==1.26.14
+virtualenv==20.26.6
+Werkzeug==2.0.1
+wrapt==1.15.0
+zipp==3.5.0
+zope.event==4.5.0
+zope.interface==5.4.0
+Django>=4.0,<5.0
+djangorestframework
